--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Hora do Desafio</title>
 </head>
 <body>
     <header>
         <h1></h1>
     </header>
     <main class="container">
-        <button onclick="" class="button">Console</button>
-        <button onclick="" class="button">Alert</button>
-        <button onclick="" class="button">Prompt</button>
-        <button onclick="" class="button">Soma</button>
+        <button id="console">Console</button>
+        <button id="alerta">Alert</button>
+        <button id="prompt">Prompt</button>
+        <button id="soma">Soma</button>
     </main>
 
       <script src="app.js"></script>
